k8s/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http
